updated css files

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,6 +1,7 @@
-<link rel="stylesheet" href="/css/header.css">
+<link rel="stylesheet" href="/assets/css/header.css">
 <header class="navHeader">
     <a href="/issueTracker" class="display-6 headerSpan" style="color:seashell"><i class="fa-solid fa-track"></i> <b
             style="font-weight: 400;">Rahul CN Project : Issue Tracker</b></a>
-    <a href="/issueTracker/projectDetails" class="btn btn-light mx-5" style="color: #36454F">Show All Project Details</a>
+    <a href="/issueTracker/projectDetails" class="btn btn-light mx-5" style="color: #36454F">Show All Project
+        Details</a>
 </header>
