--- a/views/createIssue.ejs
+++ b/views/createIssue.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/createProject.css">
+<link rel="stylesheet" href="/assets/css/createProject.css">
 
 <section class="createProjectSection">
     <form class="createProjectForm" action="/issueTracker/createAnIssue/<%= issueId.id %>/addIssue" method="post">
