--- a/views/issueTracker.ejs
+++ b/views/issueTracker.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/issueTracker.css">
+<link rel="stylesheet" href="/assets/css/issueTracker.css">
 
 <main class="mainProject">
     <a href="/issueTracker/createProject" id="addProject">
