--- a/views/projectDetails.ejs
+++ b/views/projectDetails.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/projectDetails.css">
+<link rel="stylesheet" href="/assets/css/projectDetails.css">
 
 
 <section id="filter">
